src/views/Main/styles.scss
@import '../../theme.scss';

.main {
  display: flex;

  &__header {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    flex: 0 0 50px;
  }

  &__content {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    min-width: 0;
  }

  @media print {
    display: block;
    &__header {
      display: none;
    }
    &__content {
      display: block;
    }
  }
}

.main .navBar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: auto;
  flex: 1;
  padding: 0;
  z-index: 1000;
  background-color: #156571;

  &__group {
    flex-direction: column;
    height: auto;
  }

  // Below override blueprint
  .bp3-overlay {
    white-space: nowrap;
  }
}

.appName {
  padding-left: 0.5rem;

  &-title {
    font-size: 1.4rem;
    font-family: "SFProText-Regular", Arial, Helvetica, sans-serif;
    margin-right: .5rem;

    &-logo {
      height: 2rem;
      margin-top: .5rem;
    }
  }

  &-version {
    font-size: 0.8rem;
    font-family: "SFProText-light", Arial, Helvetica, sans-serif;
    font-weight: bold;
  }
}

.main .map-navigation {
  padding: 0 ! important;

  &__header {
    background-image: url('../../images/AURAN-fond.png');
    height: 3rem;
  }

  &__title {
    padding-left: 0.5rem;
    margin-bottom: 0.5rem;
  }
}

.layerstree-group:first-child {
  margin-top: 0;
}

.layerstree-panel-list {
  width: 100%;
}

.main .layerNode-options__buttons--active, .layerNode-widgets__buttons--active {
  .icon, svg {
    filter: invert(0.5) sepia(1) saturate(5) hue-rotate(140deg);
  }
}

.details {
  .details__info-administrative {
    text-align: center;
    margin-bottom: 4px;
  }

  .details__list {

    .details__column-label {
      white-space: normal;
      padding-right: 18px;
    }

    .details__column-value {
      vertical-align: bottom;
      white-space: nowrap;
    }
  }
}

// Fix temporary waiting upgrade TerraLego
.visualizer {
  .interactive-map__legends {
    overflow: unset;
    overflow-y: scroll;

    .tf-legend {
      min-width: unset;
      max-width: none;
      max-height: 350px;

      .tf-legend__only-circles {
        width: 300px;
        height: 280px;

        .tf-legend__item {
          bottom: 50px;
        }
      }
    }

    .tf-legend__title {
      display: flex;
      align-self: center;
    }
  }
}

